--- a/index.html
+++ b/index.html
@@ -20,14 +20,15 @@
                 Although Roblox has received generally positive reviews from critics, it has faced criticism for its moderation, microtransactions, and allegations of exploitative practices toward children.
               </p>
           </div>  
-            <span> <h3> "5 Reasons why this game game is my favorite" </h3> </span>
-            <p> Copyright &copy; Marykhryss Raniella Ea 9-Potassium.</p>
+            <span> <h3> "5 Reasons why this game game is my favorite" </h3> 
             <ol>
               <li> This game is Fun </li>
               <li> Its very interactive </li>
-              <li> I can still play with my friends even from afar </li>
+              <li> Has many game genres </li>
               <li> You can make new friends </li>
-              <li> You can learn different types of survival skills </li>
+              <li> You can enhance different types of gaming skills </li>
             </ol>
+            </span>
+            <p> Copyright &copy; Marykhryss Raniella Ea 9-Potassium.</p>
       </body>
 </html>
